--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -97,15 +97,15 @@ Ordinal data's prevalence is notably high in social sciences, especially in surv
 are not considered valid. 
 This demonstrates that performing arithmetic calculations on the numerical values assigned to the categories does not make sense.
 
-\begin{figure}[ht!] % 'h!' places the figure here, in the text
-    \centering % Centers the figure
-    \includegraphics[width=0.6\textwidth]{images/ordinal_data_dist.png} % Include the image with 50% of the text width
-    \caption{Latent trait interpretation of ordinal classification. 
-    In this plot, the logistic density represents the distribution of latent traits for a particular individual. 
-    It is assumed that a random variable is drawn from this density, and the value of this random variable determines an individual's classification. 
-    For example, if a deviate of 0.5 is drawn, the individual receives a D. (~\cite{Johnson1999}).} % Caption for the image
-    \label{fig:ordinal} % Label for referencing the figure in the text
-  \end{figure}
+% \begin{figure}[ht!] % 'h!' places the figure here, in the text
+%     \centering % Centers the figure
+%     \includegraphics[width=0.6\textwidth]{images/ordinal_data_dist.png} % Include the image with 50% of the text width
+%     \caption{Latent trait interpretation of ordinal classification. 
+%     In this plot, the logistic density represents the distribution of latent traits for a particular individual. 
+%     It is assumed that a random variable is drawn from this density, and the value of this random variable determines an individual's classification. 
+%     For example, if a deviate of 0.5 is drawn, the individual receives a D. (~\cite{Johnson1999}).} % Caption for the image
+%     \label{fig:ordinal} % Label for referencing the figure in the text
+%   \end{figure}
 
 \subsection*{Comparison with continuous numerical data}
 
